# MultiMediaDemo

./: settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/lyman/multimediademo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/lyman/multimediademo/: MainActivity.java  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lyman/multimediademo/: ExampleUnitTest.java
audio/: build.gradle
audio/src/androidTest/java/com/lyman/audio/: ExampleInstrumentedTest.java
audio/src/main/: AndroidManifest.xml
audio/src/main/java/com/lyman/audio/: MainActivity.java
audio/src/main/java/com/lyman/audio/base/: Config.java  SoundPoolUtil.java
audio/src/main/java/com/lyman/audio/base/capturer/: AudioCapturer.java  AudioPlayer.java  AudioRecordCapturer.java  IAudioCapturer.java  MediaRecorderCapturer.java  OnAudioFrameCapturedListener.java  WavAudioRecordCapturer.java
audio/src/main/java/com/lyman/audio/base/codec/: AudioCodec.java  AudioDecoder.java  AudioEncoder.java  IAudioCodec.java
audio/src/main/java/com/lyman/audio/base/player/: AudioPlayer.java  AudioTrackPlayer.java  IAudioPlayer.java  MyMediaPlayer.java  WavAudioTrackPlayer.java
audio/src/main/java/com/lyman/audio/base/wav/: WavFileHeader.java  WavFileReader.java  WavFileWriter.java
audio/src/main/res/layout/: activity_main.xml
audio/src/main/res/values/: strings.xml
audio/src/test/java/com/lyman/audio/: ExampleUnitTest.java
ffmepg/: CMakeLists.txt  build.gradle
ffmepg/src/androidTest/java/com/lyman/ffmepg/: ExampleInstrumentedTest.java
ffmepg/src/main/: AndroidManifest.xml
ffmepg/src/main/java/com/lyman/ffmepg/: BasicInfoActivity.java  MainActivity.java
ffmepg/src/main/jni/: Android.mk  Application.mk  native-lib.c
ffmepg/src/main/res/layout/: activity_basic_info.xml  activity_main.xml
ffmepg/src/main/res/values/: strings.xml
ffmepg/src/test/java/com/lyman/ffmepg/: ExampleUnitTest.java
ffmpeg/: build.gradle
ffmpeg/src/main/: AndroidManifest.xml
ffmpeg/src/main/java/com/lyman/ffmpeg/: BasicInfoActivity.java  MainActivity.java
ffmpeg/src/main/jni/: native-lib.c
ffmpeg/src/main/res/layout/: activity_basic_info.xml
ffmpeg_cmake/: CMakeLists.txt  build.gradle
ffmpeg_cmake/src/androidTest/java/com/lyman/ffmpeg_cmake/: ExampleInstrumentedTest.java
ffmpeg_cmake/src/main/: AndroidManifest.xml
ffmpeg_cmake/src/main/cpp/: decode-lib.c  native-lib.c
ffmpeg_cmake/src/main/java/com/lyman/ffmpeg_cmake/: BasicInfoActivity.java  DecodeActivity.java  MainActivity.java
ffmpeg_cmake/src/main/res/layout/: activity_basic_info.xml  activity_decode.xml  activity_main.xml
ffmpeg_cmake/src/main/res/values/: strings.xml
ffmpeg_cmake/src/test/java/com/lyman/ffmpeg_cmake/: ExampleUnitTest.java
ffmpeg_cmake_single/: CMakeLists.txt  build.gradle
ffmpeg_cmake_single/src/androidTest/java/com/lyman/ffmpeg_cmake_single/: ExampleInstrumentedTest.java
ffmpeg_cmake_single/src/main/: AndroidManifest.xml
ffmpeg_cmake_single/src/main/cpp/: basicinfo-lib.c  ffmpeginvoke.c  streamer-lib.c
ffmpeg_cmake_single/src/main/cpp/include/: cmdutils.c  config.h  ffmpeg.c  ffmpeg.h  ffmpeg_filter.c
ffmpeg_cmake_single/src/main/java/com/lyman/ffmpeg_cmake_single/: BasicInfoActivity.java  CommandLineActivity.java  MainActivity.java  StreamerActivity.java
ffmpeg_cmake_single/src/main/java/com/lyman/ffmpeg_cmake_single/utils/: FFmpegKit.java
ffmpeg_cmake_single/src/main/res/layout/: activity_command_line.xml  activity_main.xml  activity_streamer.xml
ffmpeg_cmake_single/src/main/res/values/: strings.xml
ffmpeg_cmake_single/src/test/java/com/lyman/ffmpeg_cmake_single/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
video/: build.gradle
video/src/androidTest/java/com/lyman/video/: ExampleInstrumentedTest.java
video/src/main/: AndroidManifest.xml
video/src/main/java/com/lyman/video/: Main2Activity.java  MainActivity.java  Size.java
video/src/main/java/com/lyman/video/camera/: CameraActivity.java  CameraPreview.java  WaterMarkPreview.java
video/src/main/java/com/lyman/video/camera/utils/: BitmapUtils.java
video/src/main/java/com/lyman/video/camera2/: Camera2Activity.java  Camera2Preview.java
video/src/main/java/com/lyman/video/camera2/utils/: ImageUtil.java
video/src/main/java/com/lyman/video/decompose_compose/: DecomposeAndComposeActivity.java
video/src/main/java/com/lyman/video/decompose_compose/utils/: MediaUtil.java
video/src/main/java/com/lyman/video/encode_decode/: EncodeAndDecodeActivity.java
video/src/main/java/com/lyman/video/encode_decode/decode/: AVCDecoderToSurface.java  DecodeH264ToSurfaceViewActivity.java  DecodeH264ToTextureViewActivity.java
video/src/main/java/com/lyman/video/encode_decode/encode/: AvcEncoder.java
video/src/main/java/com/lyman/video/system/: SystemCameraActivity.java  TakePhotoActivity.java  TakeVideoActivity.java
video/src/main/java/com/lyman/video/video_audio_encode_decode/: EncodeAndDecodeVideoAndAudioActivity.java
video/src/main/java/com/lyman/video/video_audio_encode_decode/encode/: CameraPreview.java  CameraRecorder.java  EncodeToMP4Activity.java  MediaAudioEncoder.java  MediaEncoder.java  MediaMuxerWrapper.java  (+1 more)
video/src/main/java/com/lyman/video/video_encode_decode/: EncodeAndDecodeActivity.java
video/src/main/res/layout/: activity_camera.xml  activity_camera2.xml  activity_decode_h264_to_surface_view.xml  activity_decode_h264_to_texture_view.xml  activity_decompose_and_compose.xml  activity_encode.xml  activity_encode_and_decode.xml  activity_encode_and_decode_video_and_audio.xml  activity_encode_yuvto_h264.xml  activity_main.xml  activity_main2.xml  activity_system_photo.xml  activity_take_photo.xml  activity_take_video.xml  content_encode.xml
video/src/main/res/values/: strings.xml
video/src/main/res/xml/: file_paths.xml
video/src/test/java/com/lyman/video/: ExampleUnitTest.java
(+12 files in other folders)
